stop messages overflowing into input form

--- a/discord-clone/src/Chat.css
+++ b/discord-clone/src/Chat.css
@@ -18,12 +18,21 @@
     scrollbar-width: none;
     }
 
+.chat__messagesContainer {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    max-height: 100%;
+    align-items: flex-start;
+    }
+
 .chat__input {
     color: lightgray;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
+    padding: 10px;
     border-radius: 5px;
     margin: 20px;
     border-top: 1px solid gray;
